TradeMarketing/force-app/main/default/objects/Order/fields/Account1__c.field-meta.xml
<CustomField>
    <fullName>Account1__c</fullName>
    <formula>Account.Account__c</formula>
    <label>Account #</label>
    <type>Text</type>
</CustomField>