TradeMarketing/force-app/main/default/objects/Order/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <label>Additional Notes</label>
    <type>TextArea</type>
</CustomField>