TradeMarketing/force-app/main/default/objects/Order/fields/Cust_Num__c.field-meta.xml
<CustomField>
    <fullName>Cust_Num__c</fullName>
    <description>Customer Number from Orders In GP</description>
    <label>Cust_Num</label>
    <length>50</length>
    <type>Text</type>
</CustomField>