TradeMarketing/force-app/main/default/objects/Order/fields/Custom_notes_for_this_order__c.field-meta.xml
<CustomField>
    <fullName>Custom_notes_for_this_order__c</fullName>
    <label>Custom notes for this order</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>