TradeMarketing/force-app/main/default/objects/Order/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>Document Type</description>
    <inlineHelpText>Sales document type</inlineHelpText>
    <label>DocumentType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>