TradeMarketing/force-app/main/default/objects/Order/fields/Ext_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ext_Amount__c</fullName>
    <description>Extended amoun _ created by Sam</description>
    <label>Ext_Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>