TradeMarketing/force-app/main/default/objects/Order/fields/Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>Initiated_Date__c</fullName>
    <label>Initiated Date</label>
    <type>Date</type>
</CustomField>