TradeMarketing/force-app/main/default/objects/Order/fields/MISCDATETEST__c.field-meta.xml
<CustomField>
    <fullName>MISCDATETEST__c</fullName>
    <label>MISCDATETEST</label>
    <type>Date</type>
</CustomField>