TradeMarketing/force-app/main/default/objects/Order/fields/Order_Form__c.field-meta.xml
<CustomField>
    <fullName>Order_Form__c</fullName>
    <formula>(IF(OR(ISPICKVAL(Type, &quot;Wholesaler or Distributor&quot;), ISPICKVAL(Type, &quot;Wholesaler_or_Distributor&quot;)),HYPERLINK(&quot;/apex/GT_WholesaleOrderForm?id=&quot;&amp;Id, &quot;Launch Wholesale Order Form&quot;) , &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Form</label>
    <type>Text</type>
</CustomField>