TradeMarketing/force-app/main/default/objects/Order/fields/ORDER_NUM__c.field-meta.xml
<CustomField>
    <fullName>ORDER_NUM__c</fullName>
    <description>ORDER NUMBER FROM GP</description>
    <externalId>true</externalId>
    <label>ORDER_NUM</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>