TradeMarketing/force-app/main/default/objects/Order/fields/Pallets__c.field-meta.xml
<CustomField>
    <fullName>Pallets__c</fullName>
    <label>Pallets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>