TradeMarketing/force-app/main/default/objects/Order/fields/Test_Sam__c.field-meta.xml
<CustomField>
    <fullName>Test_Sam__c</fullName>
    <description>Created by Sam to Add to Mapping</description>
    <label>Test_Sam</label>
    <type>AutoNumber</type>
</CustomField>