TradeMarketing/force-app/main/default/objects/Order/fields/Today_s_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Today&#39;s Date</label>
    <type>Date</type>
</CustomField>