TradeMarketing/force-app/main/default/objects/Order/fields/VIP__c.field-meta.xml
<CustomField>
    <fullName>VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CHECK IF VIP</description>
    <inlineHelpText>CREATED BY SAM TO IDENTIFY VIP CUSTOMERS</inlineHelpText>
    <label>VIP</label>
    <type>Checkbox</type>
</CustomField>